feat: 交差しているペアを返す関数を実装
