# backend/internal/api/oas_unimplemented_gen.go
@@ -1,0 +1,121 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package api
+
+import (
+	"context"
+
+	ht "github.com/ogen-go/ogen/http"
+)
+
+// UnimplementedHandler is no-op Handler which returns http.ErrNotImplemented.
+type UnimplementedHandler struct{}
+
+var _ Handler = UnimplementedHandler{}
+
+// CreateMessage implements createMessage operation.
+//
+// Send message to adjacent player.
+//
+// POST /api/rooms/{room_id}/messages
+func (UnimplementedHandler) CreateMessage(ctx context.Context, req *CreateMessageRequest, params CreateMessageParams) (r *Message, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// DeleteMyDirectionalIntent implements deleteMyDirectionalIntent operation.
+//
+// Set directional swap intent OFF (prev or next).
+//
+// DELETE /api/rooms/{room_id}/players/me/intent
+func (UnimplementedHandler) DeleteMyDirectionalIntent(ctx context.Context, req *DirectionalIntentRequest, params DeleteMyDirectionalIntentParams) (r *DirectionalIntentResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// DeleteSwapIntent implements deleteSwapIntent operation.
+//
+// Cancel swap intent by target player ID.
+//
+// DELETE /api/rooms/{room_id}/swaps/intents/{target_player_id}
+func (UnimplementedHandler) DeleteSwapIntent(ctx context.Context, params DeleteSwapIntentParams) (r *DeleteSwapIntentResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// GetMessages implements getMessages operation.
+//
+// Get message history related to myself.
+//
+// GET /api/rooms/{room_id}/messages
+func (UnimplementedHandler) GetMessages(ctx context.Context, params GetMessagesParams) (r []Message, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// GetRoom implements getRoom operation.
+//
+// Get room state.
+//
+// GET /api/rooms/{room_id}
+func (UnimplementedHandler) GetRoom(ctx context.Context, params GetRoomParams) (r *RoomStateResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// GetRoomIntersections implements getRoomIntersections operation.
+//
+// Get intersecting edge pairs in room.
+//
+// GET /api/rooms/{room_id}/intersections
+func (UnimplementedHandler) GetRoomIntersections(ctx context.Context, params GetRoomIntersectionsParams) (r *RoomIntersectionsResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// JoinRoom implements joinRoom operation.
+//
+// Join matching queue.
+//
+// POST /api/rooms/join
+func (UnimplementedHandler) JoinRoom(ctx context.Context, req *JoinRoomRequest) (r *JoinRoomResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// PatchMyDirectionalIntent implements patchMyDirectionalIntent operation.
+//
+// Set directional swap intent ON (prev or next).
+//
+// PATCH /api/rooms/{room_id}/players/me/intent
+func (UnimplementedHandler) PatchMyDirectionalIntent(ctx context.Context, req *DirectionalIntentRequest, params PatchMyDirectionalIntentParams) (r *DirectionalIntentResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// Ping implements ping operation.
+//
+// Ping.
+//
+// GET /api/v1/ping
+func (UnimplementedHandler) Ping(ctx context.Context) (r PingOK, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// PutConnection implements putConnection operation.
+//
+// Upsert connection intent by target player ID.
+//
+// PUT /api/rooms/{room_id}/connections/{target_id}
+func (UnimplementedHandler) PutConnection(ctx context.Context, req *ConnectionRequest, params PutConnectionParams) (r *ConnectionResponse, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// SubscribeRoomStream implements subscribeRoomStream operation.
+//
+// Subscribe room events (SSE).
+//
+// GET /api/rooms/{room_id}/stream
+func (UnimplementedHandler) SubscribeRoomStream(ctx context.Context, params SubscribeRoomStreamParams) (r SubscribeRoomStreamOK, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// NewError creates *ErrorStatusCode from error returned by handler.
+//
+// Used for common default response.
+func (UnimplementedHandler) NewError(ctx context.Context, err error) (r *ErrorStatusCode) {
+	r = new(ErrorStatusCode)
+	return r
+}
